...
      

      {/* Header Section */}
      <View style={styles.header}>
        <Text style={styles.headerTitle}>Connectify</Text>
        <TouchableOpacity onPress={()=> signOut()}>
          <Ionicons name="log-out-outline" size={24} color={COLORS.white}/>
        </TouchableOpacity>
      </View>

      
      <FlatList 
        data={results.filter(Boolean)}
...
